--- a/w2d3/forms/loginForm.html
+++ b/w2d3/forms/loginForm.html
@@ -50,7 +50,7 @@
             <form class="needs-validation form1" id="loginForm">
                 <div class="form-group">
                     <label for="inputEmail">Email address</label>
-                    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
+                    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required pattern="^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
@@ -66,7 +66,8 @@
                     <label class="form-check-label" for="checkedBox">Check me out</label>
                 </div>
                 <div class="form-group">
-                    <button id="submitForm" type="submit" class="btn btn-primary">Submit</button>
+                    <button id="submitForm" type="submit" class="btn btn-primary mr-3">Submit</button>
+                    <button type="reset" class="btn btn-outline-dark">Reset</button>
                 </div>
             </form>
         </div>
