--- a/w2d3/forms/productForm.html
+++ b/w2d3/forms/productForm.html
@@ -92,10 +92,10 @@
                     </div>
                 </div>
 
-                <div class="text-right">
+                <div class="text-right form-group">
                     <button type="reset" class="btn btn-outline-dark mr-5">Reset</button>
                     <button class="btn btn-outline-danger mr-5">Cancel</button>
-                    <button class="btn btn-outline-primary" id="addProduct" data-toggle="collapse" data-target="#collapseArea" aria-expanded="false" aria-controls="collapseArea">Add Product</button>
+                    <button class="btn btn-outline-primary" type="submit" id="addProduct" data-toggle="collapse" data-target="#collapseArea" aria-expanded="false" aria-controls="collapseArea">Add Product</button>
                 </div>
 
                 <div class="collapse text-center mt-2" id="collapseArea">
