--- a/w2d3/index.html
+++ b/w2d3/index.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/util.css">
+
+    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </head>
 
@@ -39,6 +41,25 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="prob1 pt-5">
+            <h3 class="ml-3">Problem 1</h3>
+            <div class="alert alert-primary" role="alert" id="prob1Content">
+            </div>
+        </div>
+
+        <div class="prob2">
+            <h3 class="ml-3">Problem 2</h3>
+            <div class="alert alert-secondary" role="alert" id="prob2Content">
+            </div>
+        </div>
+
+        <div class="prob3">
+            <h3 class="ml-3">Problem 3</h3>
+            <div class="alert alert-info" role="alert" id="prob3Content">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
